--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="password_hint">Password</string>
     <string name="log_in">Log In</string>
     <string name="register">Register now</string>
-    <string name="register_text">Dont have an account yet?</string>
+    <string name="register_text">Don\'t have an account yet?</string>
+    <string name="invalid_username">Invalid username</string>
+    <string name="invalid_password">Invalid password</string>
+    <string name="invalid_login">Invalid credentials</string>
 </resources>
