--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="section_myexercises">My exercises</string>
     <string name="nav_header_desc">User image</string>
     <string name="nav_header_title">User</string>
+    <string name="section_favourites">Favourites</string>
 </resources>
