--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="nav_header_desc">User image</string>
     <string name="nav_header_title">User</string>
     <string name="section_favourites">Favourites</string>
+    <string name="email">Email</string>
+    <string name="pwdConfirm">Repeat password</string>
 </resources>
