--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -17,4 +17,5 @@
     <string name="section_favourites">Favoritos</string>
     <string name="email">Mail</string>
     <string name="pwdConfirm">Confirmar contraseña</string>
+    <string name="action_search">Search</string>
 </resources>
