modificaciones de nombres - correciones post presentacion

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,13 +9,13 @@
     <string name="invalid_username">Usuario invalido</string>
     <string name="invalid_password">Contraseña invalido</string>
     <string name="invalid_login">Credenciales invalidas</string>
-    <string name="section_myroutines">Mis rutinas</string>
+    <string name="section_routines">Rutinas</string>
     <string name="section_explore">Explorar</string>
-    <string name="section_myexercises">Mis ejercicios</string>
+    <string name="section_profile">Perfil</string>
     <string name="nav_header_desc">Foto del usuario</string>
     <string name="nav_header_title">Usuario</string>
     <string name="section_favourites">Favoritos</string>
     <string name="email">Mail</string>
     <string name="pwdConfirm">Confirmar contraseña</string>
-    <string name="action_search">Search</string>
+    <string name="action_search">Buscar</string>
 </resources>
