--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -28,4 +28,6 @@
     <string name="invalid_confirmation">Email o coódigo inválidos</string>
     <string name="invalid_email">Email inválido</string>
     <string name="invalid_code">Código inválido</string>
+    <string name="action_share">Share</string>
+    <string name="action_fav">Add to favourites</string>
 </resources>
