--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,4 +32,9 @@
     <string name="action_fav">Add to favourites</string>
     <string name="invalid_registration">Credenciales invalidas</string>
     <string name="invalid_password_confirmation">Las contraseñas no coinciden</string>
+    <string name="order_by">Ordenar por</string>
+    <string name="date">Fecha</string>
+    <string name="score">Puntaje</string>
+    <string name="difficulty">Dificultad</string>
+    <string name="category">Categoría</string>
 </resources>
