--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,11 @@
     <string name="section_explore">Explore</string>
 
     <string name="section_profile">Profile</string>
+    <string name="profile_first_name">First Name</string>
+    <string name="profile_last_name">Last Name</string>
+    <string name="profile_save">Save</string>\
+    <string name="profile_phone">Phone</string>
+    <string name="profile_photo">Change avatar</string>
     <string name="nav_header_desc">User image</string>
     <string name="nav_header_title">User</string>
     <string name="section_favourites">Favourites</string>
