--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -43,7 +43,7 @@
     <string name="profile_save">Guardar</string>
     <string name="profile_phone">Telefono</string>
     <string name="profile_photo">Cambiar avatar</string>
-
+    <string name="verification">Verificación de cuenta</string>
 
 
 </resources>
