--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="score">Score</string>
     <string name="difficulty">Difficulty</string>
     <string name="category">Category</string>
+    <string name="verification">Account verification</string>
 </resources>
