--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="difficulty">Difficulty</string>
     <string name="category">Category</string>
     <string name="verification">Account verification</string>
+    <string name="verification_text">Thank you for registering at MyGym, we´ve sent you an email to the adress specified before. Please coppy the verification code and the same mail below.</string>
 </resources>
