--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="score">Score</string>
     <string name="difficulty">Difficulty</string>
     <string name="category">Category</string>
+    <string name="gender">Gender</string>
+    <string name="femenine">Femenine</string>
+    <string name="masculine">Masculine</string>
 </resources>
