retoques en navigation view

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,7 +13,7 @@
     <string name="section_explore">Explorar</string>
     <string name="section_profile">Perfil</string>
     <string name="nav_header_desc">Foto del usuario</string>
-    <string name="nav_header_title">Usuario</string>
+    <string name="nav_header_title">Kanye West</string>
     <string name="section_favourites">Favoritos</string>
     <string name="email">Mail</string>
     <string name="pwdConfirm">Confirmar contraseña</string>
