--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="masculine">Masculine</string>
 
     <string name="nav_header_desc">User image</string>
-    <string name="nav_header_title">User</string>
+    <string name="nav_header_title">Kanye West</string>
     <string name="section_favourites">Favourites</string>
     <string name="email">Email</string>
     <string name="pwdConfirm">Repeat password</string>
