--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="section_explore">Explore</string>
 
     <string name="section_profile">Profile</string>
-    <string name="profile_first_name">First Name</string>
-    <string name="profile_last_name">Last Name</string>
+    <string name="profile_first_name">First name</string>
+    <string name="profile_last_name">Last name</string>
     <string name="profile_save">Save</string>
     <string name="profile_phone">Phone</string>
     <string name="profile_photo">Change avatar</string>
