correciones en strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -55,6 +55,7 @@
     <string name="verification_text">Gracias por registrarte en MyGym, acabamos de enviarte un mail a la dirección especificada previamente. Porfavor ingrese el codigo de verificacion y su mail debajo.</string>
     <string name="edit_profile">Editar</string>
     <string name="cancel_edit">Cancelar</string>
+    <string name="share_details_of_your_own_experience">Comparte detalles sobre tu propia experiencia</string>
 
 
 </resources>
