cambios en estilo

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,7 @@
     <string name="user_hint">Usuario</string>
     <string name="password_hint">Contraseña</string>
     <string name="log_in">Iniciar sesión</string>
+    <string name="log_out">Cerrar sesión</string>
     <string name="register">Registrarme ahora</string>
     <string name="register_text">¿Todavía no tienes una cuenta?</string>
     <string name="invalid_username">Usuario invalido</string>
@@ -59,4 +60,33 @@
 
     <string name="added_fav">Marcada como favorita</string>
     <string name="deleted_fav">Desmarcada como favorita</string>
+
+    <string name="review_success">Reseña enviada</string>
+    <string name="url">URL de la rutina</string>
+
+    <string name="invalid_first_name">Nombre inválido</string>
+    <string name="invalid_last_name">Apellido inválido</string>
+    <string name="invalid_data">Data inválida</string>
+    <string name="exit_question">Estas seguro que deseas salir?</string>
+    <string name="yes">Sí</string>
+    <string name="review">Reseña</string>
+    <string name="cancel">Cancelar</string>
+    <string name="error_exercise">No cargo el ejercicio del ciclo</string>
+    <string name="error_cycle">No cargo el ciclo</string>
+    <string name="routine">Rutina</string>
+    <string name="hard">Difīcil</string>
+    <string name="when">Cuando quieres reproducir esta rutina?</string>
+    <string name="monday">Lunes</string>
+    <string name="Tuesday">Martes</string>
+    <string name="wednesday">Miércoles</string>
+    <string name="thursday">Jueves</string>
+    <string name="friday">Viernes</string>
+    <string name="saturday">Sábado</string>
+    <string name="sunday">Domingo</string>
+    <string name="accept">Aceptar</string>
+    <string name="cycle">Ciclo</string>
+    <string name="good_morning">Buen día, Usuario! 👋 </string>
+    <string name="recommended_routine">Porque no pruebas Calistenia hoy?</string>
+    <string name="url_layout">Ingrese URL de la rutina</string>
+
 </resources>
