--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="good_morning">Good morning, User! 👋 </string>
     <string name="recommended_routine">How about doing Calisthenics today?</string>
     <string name="url_layout">Type the routine\'s URL</string>
+    <string name="profile_saved">Profile saved</string>
 </resources>
