--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 
 
     <string-array name="genders">
-        <item>Not Specified</item>
+        <item>Other</item>
         <item>Female</item>
         <item>Male</item>
     </string-array>
