--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -45,7 +45,7 @@
     <string name="profile_phone">Telefono</string>
     <string name="profile_photo">Cambiar avatar</string>
     <string-array name="genders">
-        <item>Sin especificar</item>
+        <item>Otro</item>
         <item>Femenino</item>
         <item>Masculino</item>
     </string-array>
