start of filter layout

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -94,4 +94,13 @@
     <string name="afternoon">Buenas tardes</string>
     <string name="evening">Buenas tardes</string>
     <string name="night">Buenas noches</string>
+    <string name="sort_spinner_title">Ordenar por</string>
+    <string name="view_spinner_title">Visualizar</string>
+
+    <string-array name="sort_by">
+        <item name="date">Fecha</item>
+        <item name="score">Puntuación</item>
+        <item name="difficulty">Dificultad</item>
+        <item name="category">Categoría</item>
+    </string-array>
 </resources>
