--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,14 @@
     <string name="afternoon">Good afternoon</string>
     <string name="evening">Good evening</string>
     <string name="night">Good night</string>
+    <string name="sort_spinner_title">Sort by</string>
+    <string name="view_spinner_title">View</string>
+
+    <string-array name="sort_by">
+        <item name="date">Date</item>
+        <item name="score">Score</item>
+        <item name="difficulty">Difficulty</item>
+        <item name="category">Category</item>
+    </string-array>
 
 </resources>
