--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,9 @@
         <item name="category">Category</item>
     </string-array>
 
+    <string-array name="direction">
+        <item name="asc">Ascendant</item>
+        <item name="desc">Descendant</item>
+    </string-array>
+
 </resources>
