--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,8 @@
     <string name="evening">Good evening</string>
     <string name="night">Good night</string>
     <string name="send">Send</string>
+    <string name="view_spinner_title">View</string>
+    <string name="sort_spinner_title">Sort by</string>
 
     <string-array name="sort_by">
         <item name="date">Date</item>
