--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -95,5 +95,6 @@
     <string name="evening">Buenas tardes</string>
     <string name="night">Buenas noches</string>
     <string name="send">Enviar</string>
+    <string name="view_spinner_title">View</string>
 
 </resources>
