--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -90,6 +90,11 @@
     <string name="url_layout">Ingrese URL de la rutina</string>
     <string name="profile_saved">Perfil guardado</string>
 
+    <string name="play">Ejecutar</string>
+
+    <string name="view_spinner_title">Ver</string>
+    <string name="sort_spinner_title">Ordenar por</string>
+
     <string name="morning">Buenos días</string>
     <string name="afternoon">Buenas tardes</string>
     <string name="evening">Buenas tardes</string>
