--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -67,7 +67,7 @@
     <string name="invalid_first_name">Nombre inválido</string>
     <string name="invalid_last_name">Apellido inválido</string>
     <string name="invalid_data">Data inválida</string>
-    <string name="exit_question">Estas seguro que deseas salir?</string>
+    <string name="exit_question">¿Estas seguro que deseas salir?</string>
     <string name="yes">Sí</string>
     <string name="review">Reseña</string>
     <string name="cancel">Cancelar</string>
@@ -75,7 +75,7 @@
     <string name="error_cycle">No cargo el ciclo</string>
     <string name="routine">Rutina</string>
     <string name="hard">Difīcil</string>
-    <string name="when">Cuando quieres reproducir esta rutina?</string>
+    <string name="when">¿Cuando quieres reproducir esta rutina?</string>
     <string name="monday">Lunes</string>
     <string name="Tuesday">Martes</string>
     <string name="wednesday">Miércoles</string>
@@ -85,7 +85,7 @@
     <string name="sunday">Domingo</string>
     <string name="accept">Aceptar</string>
     <string name="cycle">Ciclo</string>
-    <string name="good_morning">Buen día, Usuario! 👋 </string>
+    <string name="good_morning">¡Buen día, Usuario! 👋 </string>
     <string name="recommended_routine">¿Por qué no pruebas Calistenia hoy?</string>
     <string name="url_layout">Ingrese URL de la rutina</string>
     <string name="profile_saved">Perfil guardado</string>
@@ -95,5 +95,7 @@
     <string name="evening">Buenas tardes</string>
     <string name="night">Buenas noches</string>
     <string name="send">Enviar</string>
-
+    <string name="play">Ejecutar</string>
+    <string name="detailed">Detallada</string>
+    <string name="queue">Encolada</string>
 </resources>
