Implementación de register + confirmation ( Issue #4 )

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -114,4 +114,6 @@
     <string name="send">Enviar</string>
     <string name="detailed">Detallada</string>
     <string name="queue">Encolada</string>
+    <string name="register_success">Register successful. Please confirm your email to proceed.</string>
+    <string name="success_verification">Account verified successfully</string>
 </resources>
