--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,7 @@
     <string name="ucrop_scale">Scale</string>
     <string name="ucrop_crop">Crop</string>
     <string name="no_my_routines">Todavía no tienes rutinas</string>
+    <string name="notif_text">¡Vamos a entrenar!</string>
+    <string name="error_notif">Debes seleccionar al menos un día</string>
+    <string name="success_notif">La alarma se ha creado correctamente</string>
 </resources>
