--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,5 @@
     <string name="notif_text">¡Vamos a entrenar!</string>
     <string name="error_notif">Debes seleccionar al menos un día</string>
     <string name="success_notif">La alarma se ha creado correctamente</string>
+    <string name="choose_day">Choose days</string>
 </resources>
