--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,7 @@
     <string name="notif_text">¡Vamos a entrenar!</string>
     <string name="error_notif">Debes seleccionar al menos un día</string>
     <string name="success_notif">La alarma se ha creado correctamente</string>
+    <string name="no_highlights">Todavía no hay rutinas destacadas</string>
+    <string name="no_recents">Aún no has ejecutado rutinas</string>
     <string name="choose_day">Choose days</string>
 </resources>
