--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,6 @@
     <string name="choose_day">Choose days</string>
     <string name="share">Compartir</string>
     <string name="action_take_qr">Take QR</string>
+    <string name="scan_qr">Scan QR</string>
+    <string name="scan_your_code">Scan your code</string>
 </resources>
