--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,6 @@
     <string name="action_take_qr">Take QR</string>
     <string name="scan_qr">Scan QR</string>
     <string name="scan_your_code">Scan your code</string>
+    <string name="no_perm">You need the camera permission to be able to scan codes</string>
+    <string name="no_app">No App Available</string>
 </resources>
